Travis: first build for you!

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
 - sudo apt-get install -y rsync
 - sudo apt-get install -y expect
 after_success:
-- ssh-keyscan 5.135.248.254 >> ~/.ssh/known_hosts
-- chmod 770 .travis/deploy.sh
-- chmod 770 .travis/deploy.exp
+#- ssh-keyscan 5.135.248.254 >> ~/.ssh/known_hosts
+#- chmod 770 .travis/deploy.sh
+#- chmod 770 .travis/deploy.exp
 - chmod 770 .travis/notification.sh
-- ".travis/deploy.exp"
+#- ".travis/deploy.exp"
 - '.travis/notification.sh "MCTrapsDisplayer build ended"'
 branchers:
   only:
